--- a/limits-service/src/main/resources/application.properties
+++ b/limits-service/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=limits-service
+#spring.cloud.config.name=
 spring.config.import=optional:configserver:http://localhost:8888
+
+spring.profiles.active=qa
