--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>limits-service</module>
+        <module>spring-cloud-config-server</module>
+        <module>currency-exchange-service</module>
     </modules>
 
     <properties>
