--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>currency-exchange-service</module>
         <module>currency-conversion-service</module>
         <module>naming-service</module>
+        <module>api-gateway</module>
     </modules>
 
     <properties>
