--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.h2.console.enable=true
 spring.jpa.defer-datasource-initialization=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p [${spring.application.name},%X{traceId:-},%X{spanId:-}]
