--- a/currency-exchange-service/pom.xml
+++ b/currency-exchange-service/pom.xml
@@ -54,6 +54,15 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        <!-- resilience4J -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot2</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
